--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "tsc -w & nodemon ."
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
