--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.1.0",
     "morgan": "~1.9.1",
     "oauth2-server": "^3.1.1",
+    "oauth2-server-typescript": "^5.0.0-dev.3",
     "supertest": "^6.1.6"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.12",
+    "@types/oauth2-server": "^3.0.13",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
