--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~2.6.9",
     "eslint-plugin-jest": "^25.3.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "mongoose": "^6.1.0",
     "morgan": "~1.9.1",
     "oauth2-server": "^3.1.1",
