--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^6.1.0",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "oauth2-server": "^3.1.1",
     "oauth2-server-typescript": "^5.0.0-dev.3",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
