--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.16.4",
     "morgan": "~1.9.1",
     "swagger-ui-express": "^4.2.0",
-    "tsoa": "^3.14.1"
+    "ws": "^8.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -24,6 +24,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "concurrently": "^6.4.0",
@@ -37,6 +38,7 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
+    "tsoa": "^3.14.1",
     "typescript": "^4.5.3"
   }
 }
