--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "knex": "^0.95.14",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
