--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "knex": "^0.95.14",
+    "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
