--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "morgan": "~1.9.1",
+    "sse-channel": "^4.0.0",
     "swagger-ui-express": "^4.2.0",
     "ws": "^8.3.0"
   },
